# cutforge

./: PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  tauri.conf.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ipc/: mod.rs
src-tauri/src/: main.rs
src-tauri/src/core/: timeline.rs
src/components/panels/MediaBrowser/: index.tsx
src/components/panels/Timeline/: ClipBlock.tsx  Playhead.tsx  TrackHeader.tsx  index.tsx
src/stores/: useTimelineStore.ts
