[package]
name = "cutforge"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "^2.0.0", features = ["api-all"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "1.4", features = ["v4"] }
ffmpeg-next = "0.9"
gstreamer = "0.20"
cpal = "0.13"
rubberband = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }

# Optional plugins
[dependencies.tauri-plugin-log]
version = "^2.0.0"
optional = true
features = ["api-all"]

[dependencies.tauri-plugin-http]
version = "^2.0.0"
optional = true
features = ["api-all"]

[dependencies.tauri-plugin-fs]
version = "^2.0.0"
optional = true
features = ["api-all"]

[dependencies.tauri-plugin-os]
version = "^2.0.0"
optional = true
features = ["api-all"]

[features]
default = ["tauri-plugin-log"]
api-all = ["tauri-plugin-log", "tauri-plugin-http", "tauri-plugin-fs", "tauri-plugin-os"]
